# flask-base

./: .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: test.yml
app/: __init__.py
app/modules/: __init__.py
app/modules/hello/: views.py
app/modules/hello/static/styles/: main.css
app/modules/hello/templates/layouts/: index.html
app/modules/todos/: models.py  views.py
app/utils/: db.py
migrations/versions/: 2a4622414b64_.py
tests/: conftest.py  test_app.py
tests/modules/hello/: test_views.py
tests/modules/todos/: conftest.py  test_models.py  test_views.py
